// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Upload Button  default 1`] = `
<lego-components_button
  as="span"
  classname="upload-button"
  size="m"
  theme="raised"
  title="Загрузить файлы"
  view="action"
  width="max"
>
  <div
    class="upload-button__attach-wrapper"
  >
    <input
      accept=""
      class="upload-button__attach"
      multiple=""
      title="Загрузить файлы"
      type="file"
    />
  </div>
  Загрузить
</lego-components_button>
`;

exports[`Upload Button  disabled 1`] = `
<lego-components_button
  as="span"
  classname="upload-button"
  disabled="true"
  size="m"
  theme="raised"
  title="Загрузить файлы"
  view="action"
  width="max"
>
  <div
    class="upload-button__attach-wrapper"
  >
    <input
      accept=""
      class="upload-button__attach"
      disabled=""
      multiple=""
      title="Загрузить файлы"
      type="file"
    />
  </div>
  Загрузить
</lego-components_button>
`;
